--- a/public/src/faq.css
+++ b/public/src/faq.css
@@ -7,18 +7,67 @@
   font-family: "Poppins", sans-serif;
 }
 
-section {
-  background: url("images/background-image1.jpg") no-repeat center center;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: calc(100vh - 60px);
-  width: 100%;
+.wrapper {
+  max-width: 75%;
+  margin: auto;
+  padding-bottom: 50px;
 }
-footer {
+
+.wrapper > h1 {
+  margin: 3rem 0;
   text-align: center;
+  letter-spacing: 3px;
+  font-weight: lighter;
+}
+
+.accordion {
+  background-color: white;
+  color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+  font-size: 1.2rem;
+  width: 100%;
+  padding: 2rem 2.5rem;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: bold;
+}
+.accordion i {
+  font-size: 1.6rem;
+}
+
+.active,
+.accordion:hover {
   background-color: #ddd;
 }
+
+.pannel {
+  padding: 0 2rem 2.5rem 2rem;
+  background-color: white;
+  overflow: hidden;
+  background-color: #ddd;
+}
+
+.pannel p {
+  color: rgba(0, 0, 0, 0.8);
+  font-size: 1.2rem;
+  line-height: 1.4;
+  margin: 20px;
+}
+
+.faq {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin: 10px 0;
+}
+
+.faq.active {
+  border: none;
+}
+
+/*Navbar added from index.html*/
 
 .logo-container {
   background-color: #ddd;
