--- a/public/src/types.css
+++ b/public/src/types.css
@@ -5,20 +5,49 @@
   text-decoration: none;
   list-style: none;
   font-family: "Poppins", sans-serif;
-}
-
-section {
-  background: url("images/background-image1.jpg") no-repeat center center;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: calc(100vh - 60px);
-  width: 100%;
-}
-footer {
-  text-align: center;
   background-color: #ddd;
 }
+
+.table-container {
+  width: 85%;
+  margin: auto;
+  margin-bottom: 30px;
+}
+.table-title {
+  font-size: 1.5em;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  text-align: left;
+}
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 25px;
+}
+th,
+td {
+  padding: 15px;
+  text-align: left;
+  border-bottom: 1px solid black;
+}
+
+th {
+  background-color: black;
+  color: #ddd;
+}
+
+/*fix*/
+tr:hover {
+  background-color: red;
+  color: blue;
+}
+
+/*Navbar from index.html*/
 
 .logo-container {
   background-color: #ddd;
@@ -37,7 +66,6 @@ footer {
   max-height: 100%;
   max-width: 100%;
 }
-
 nav {
   background-color: #ddd;
   background-size: cover;
