--- a/public/src/style.css
+++ b/public/src/style.css
@@ -15,10 +15,6 @@ section {
   height: calc(100vh - 60px);
   width: 100%;
 }
-footer {
-  text-align: center;
-  background-color: #ddd;
-}
 
 .logo-container {
   background-color: #ddd;
@@ -128,4 +124,107 @@ a:hover {
   #check:checked ~ ul {
     left: 0;
   }
+}
+
+/* Footer Design */
+.footer-container {
+  max-width: 1170px;
+  margin: auto;
+  line-height: 1.5;
+}
+
+.footer {
+  background-color: #ddd;
+  padding: 70px 0;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.footer-col {
+  width: 33%;
+  padding: 0 15px;
+}
+
+.footer-col h4 {
+  font-size: 18px;
+  color: black;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+
+.footer-col h4::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: rgb(21, 37, 61);
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ddd;
+  text-decoration: none;
+  font-weight: 300;
+  color: rgb(21, 37, 61);
+  display: block;
+  transition: all 0.4s ease;
+}
+
+.footer-col ul li a:hover {
+  background-color: #ddd;
+  padding-left: 8px;
+}
+
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  color: #ddd;
+  background-color: rgb(21, 37, 61);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  transition: all 0.4s ease;
+}
+
+.footer-col .social-links a:hover {
+  color: rgb(21, 37, 61);
+  background-color: #ddd;
+  border: 2px solid rgb(21, 37, 61);
+}
+
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 574%) {
+  .footer-col {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+}
+
+.rights {
+  border-top: 1px solid rgb(21, 37, 61);
+  padding-top: 20px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 10px;
 }
