--- a/public/src/style.css
+++ b/public/src/style.css
@@ -7,18 +7,91 @@
   font-family: "Poppins", sans-serif;
 }
 
-section {
-  background: url("images/background-image1.jpg") no-repeat center center;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  height: calc(100vh - 60px);
+.slide-1,
+.slide-2 {
+  height: 100vh;
   width: 100%;
+  left: 0;
+  top: 0;
+  overflow: hidden;
 }
+.img {
+  object-fit: cover;
+  display: block;
+  position: absolute;
+  width: 200%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+}
+.slide-text {
+  width: 600px;
+  top: 300px;
+  left: 100px;
+  position: absolute;
+  color: #ddd;
+  animation: textup 12s linear infinite;
+  transform: translateY(100px);
+}
+
+@keyframes textup {
+  10% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+.slide-text h1 {
+  margin-bottom: 10px;
+}
+
+.slide-text p {
+  font-size: 18px;
+  line-height: 28px;
+  margin-top: 40px;
+}
+
+.slide-text span {
+  background: black;
+  height: 3px;
+  width: 100px;
+  position: absolute;
+}
+
+.slide-1 {
+  animation: slide1 12s linear infinite;
+}
+
+.slide-2 {
+  animation: slide2 12s linear infinite;
+}
+
+/*@keyframes slide1 {
+  0% {
+    visibility: visible;
+  }
+  50% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
+
+@keyframes slide2 {
+  0% {
+    visibility: hidden;
+  }
+  50% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}*/
 
 .logo-container {
   background-color: #ddd;
-
   height: 60px;
   width: 100%;
   display: flex;
@@ -33,23 +106,34 @@ section {
   max-height: 100%;
   max-width: 100%;
 }
+.logo-container a,
+.logo-container a:hover {
+  display: block; /* Ensures the anchor takes up the full width of the container */
+  height: 100%; /* Makes the anchor take up the full height of the container */
+  background-color: #ddd;
+}
 
 nav {
   background-color: #ddd;
   background-size: cover;
   height: 60px;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
 
 nav ul {
-  text-align: center;
-  margin-right: 20px;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 nav ul li {
   display: inline-block;
   line-height: 60px;
-  margin: 0px 25px;
+  margin: 0px 15px;
 }
 
 nav ul li a {
@@ -65,6 +149,34 @@ a:hover {
   background: rgb(21, 37, 61);
   color: #ddd;
   transition: 0.5s;
+}
+
+.search-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.search-icon {
+  font-size: 24px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.label-search-input {
+}
+
+.search-input {
+  display: none;
+  width: 150px;
+  padding: 5px 10px;
+  border: 1px solid rgb(21, 37, 61);
+  border-radius: 3px;
+  font-size: 14px;
+}
+
+.search-input.active {
+  display: block;
 }
 
 .checkbtn {
@@ -130,7 +242,7 @@ a:hover {
 .footer-container {
   max-width: 1170px;
   margin: auto;
-  line-height: 1.5;
+  line-height: 1.2;
 }
 
 .footer {
@@ -141,6 +253,7 @@ a:hover {
 .row {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 50px;
 }
 .footer-col {
   width: 33%;
@@ -221,10 +334,10 @@ a:hover {
 
 .rights {
   border-top: 1px solid rgb(21, 37, 61);
-  padding-top: 20px;
-  margin-top: 20px;
+  background-color: #ddd;
+  padding: 5px 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  line-height: 10px;
+  font-size: 12px;
 }
