--- a/public/src/CSS/style.css
+++ b/public/src/CSS/style.css
@@ -58,6 +58,25 @@
   position: absolute;
 }
 
+.slide-text button {
+  background: #ddd;
+  margin-top: 30px;
+  height: 20px;
+  border-radius: 5px;
+  width: 225px;
+  height: 40px;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 0.4s;
+  border: none;
+}
+
+.slide-text button:hover {
+  background: gray;
+  color: white;
+  transform: translateY(-5px);
+}
+
 .slide-1 {
   animation: slide1 12s linear infinite;
 }
@@ -144,8 +163,8 @@ nav ul li a {
   text-transform: uppercase;
 }
 
-a.active,
-a:hover {
+nav ul li a.active,
+nav ul li a:hover {
   background: rgb(21, 37, 61);
   color: #ddd;
   transition: 0.5s;
@@ -238,6 +257,43 @@ a:hover {
   }
 }
 
+.sentences-container {
+  position: relative;
+  background-color: #ddd;
+  width: 100%;
+  height: 100vh;
+  border-bottom: 0.5px solid black;
+}
+
+.sentences {
+  width: 100%;
+  position: absolute;
+  top: 15%;
+  align-items: center;
+  justify-content: center;
+}
+
+.sentences p {
+  width: 100%;
+  font-size: xx-large;
+  text-align: center;
+  align-items: center;
+  padding: 50px 0;
+}
+
+.about-container {
+  width: 100%;
+  height: 100vh;
+}
+.text {
+  width: 50%;
+}
+
+/*.about img {
+  width: 50%;
+  padding: 0 15px;
+  display: flex;
+}
 /* Footer Design */
 .footer-container {
   max-width: 1170px;
