--- a/public/src/CSS/style.css
+++ b/public/src/CSS/style.css
@@ -74,7 +74,6 @@
 .slide-text button:hover {
   background: gray;
   color: white;
-  transform: translateY(-5px);
 }
 
 .slide-1 {
@@ -133,6 +132,18 @@
 }
 
 nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  z-index: 100;
+
+  min-width: 100%;
+  box-shadow: 6px 11px 21px -1px rgba(0, 0, 0, 0.6);
+  /* border-bottom: 2px solid rgba(0, 0, 0, 0.6); */
+}
+
+.nav {
   background-color: #ddd;
   background-size: cover;
   height: 60px;
@@ -177,7 +188,7 @@ nav ul li a:hover {
 }
 
 .search-icon {
-  font-size: 24px;
+  font-size: 18px;
   cursor: pointer;
   margin-right: 10px;
 }
@@ -308,7 +319,9 @@ nav ul li a:hover {
 
 .row {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
+  align-items: start;
+  justify-content: space-around;
   margin-bottom: 50px;
 }
 .footer-col {
@@ -376,17 +389,16 @@ nav ul li a:hover {
 }
 
 @media (max-width: 767px) {
-  .footer-col {
-    width: 50%;
-    margin-bottom: 30px;
+  .row {
+    flex-direction: column;
   }
 }
-@media (max-width: 574%) {
+/* @media (max-width: 574px) {
   .footer-col {
     width: 100%;
     margin-bottom: 30px;
   }
-}
+} */
 
 .rights {
   border-top: 1px solid rgb(21, 37, 61);
@@ -396,4 +408,40 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   font-size: 12px;
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 120px;
+  height: auto;
+}
+
+.card {
+  width: 325px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  margin: 25px;
+  background-color: #ddd;
+}
+
+.card img {
+  width: 100%;
+  height: 220px;
+}
+
+.card-content {
+  padding: 16px;
+}
+.card-content h3 {
+  font-size: 28px;
+  margin-bottom: 8px;
+  font-weight: 100;
+}
+
+.card-content p {
+  font-size: 15px;
+  line-height: 1.3;
 }
